Bug 921327 - [Flatfish][homescreen] show 6 icons in a row on tablet

--- a/apps/homescreen/style/grid.css
+++ b/apps/homescreen/style/grid.css
@@ -83,13 +83,8 @@ body.searchPageEnabled .apps div:first-child ol > li:nth-child(13) {
 
 @media (min-width: 768px) {
 
-  /* Maximum 15 icons for page */
-  .apps ol > li:nth-child(16) {
-    display: none;
-  }
-
-  /* Maximum 10 icons for first page when searchPageEnabled */
-  body.searchPageEnabled .apps div:first-child ol > li:nth-child(11) {
+  /* Maximum 12 icons for first page when searchPageEnabled */
+  body.searchPageEnabled .apps div:first-child ol > li:nth-child(13) {
     display: none;
   }
 }
@@ -235,6 +230,10 @@ body[data-transitioning] .loading:after {
 
 /* For tablet+ Device */
 @media (min-width: 768px) {
+  .apps > div {
+    height: calc(100% - 16.9rem);
+  }
+
   .apps ol > li span.options {
     height: 4.5rem;
     background: url(../resources/images/delete.png) no-repeat left top / 4.5rem;
@@ -243,30 +242,42 @@ body[data-transitioning] .loading:after {
   .apps ol {
     -moz-box-sizing: border-box;
          box-sizing: border-box;
-    padding: 5.3rem 6rem 5.6rem 9.3rem;
+    padding: 3.5rem 7rem 6.5rem 7rem;
   }
 
   .labelWrapper {
-    margin-top: 1.5rem;
-    font-size: 1.8rem;
-    line-height: 1.8rem;
-    height: 2.3rem;
-    font-weight: 400;
+    margin-top: 1rem;
+    font-size: 1.6rem;
+    line-height: 1.6rem;
+    font-weight: bold;
   }
 
+  /* text label */
   .apps ol > li > div > span > span {
-    font-size: 1.8rem;
-    text-shadow: 0 0 0.5rem;
-  }
-
-  /* Maximum 15 icons for page */
-  .apps ol > li:nth-child(16) {
-    display: none;
+    font-size: 1.6rem;
+    text-shadow: 0 0 0.5rem rgba(0,0,0,0.5);
   }
 }
 
 @media (min-width: 768px) and (orientation: landscape) {
   .apps ol > li {
-    width: 20%; /* five a line */
+    width: calc(100% / 6); /* six a line */
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+
+  .apps ol {
+    -moz-box-sizing: border-box;
+         box-sizing: border-box;
+    padding: 3.5rem 11rem 6.5rem 11rem;
+  }
+
+  /* Maximum 18 icons for page */
+  .apps ol > li:nth-child(19) {
+    display: none;
+  }
+
+  .apps ol {
+    margin-top: 0;
   }
 }
